--- a/build.gradle
+++ b/build.gradle
@@ -37,16 +37,31 @@ dependencies {
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
     implementation 'org.modelmapper:modelmapper:3.1.0'
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+}
+
+// QueryDSL Q클래스 생성 경로 설정
+def querydslDir = "$buildDir/generated/querydsl"
+
+sourceSets {
+    main.java.srcDirs += [ querydslDir ]
+}
+
+tasks.withType(JavaCompile) {
+    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
+}
+
+clean {
+    delete file(querydslDir)
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
 
-checkstyle {
-    toolVersion = '1.0' // Checkstyle 버전
-    configFile = rootProject.file('checkstyle.xml') // Checkstyle 설정 파일 경로
-}
 
 // 이하 필요시에만 사용
 tasks.withType(Checkstyle).configureEach {
